Add probabilities histogram

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -80,7 +80,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cecf5c50",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Notebook Setup\n",
@@ -105,7 +107,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "183305a6",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Uniform Superposition Initialization\n",
@@ -118,7 +122,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8ae010df",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "superposition_circuit(2).draw(output=\"mpl\")"
@@ -137,7 +143,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5245d4c",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Mixer Hamiltonian\n",
@@ -149,7 +157,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "72fe757f",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "example_qc_mixer, _ = mixer_circuit(2)\n",
@@ -171,7 +181,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "42ea509a",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
@@ -200,7 +212,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5b038751",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Cost Hamiltonian\n",
@@ -212,7 +226,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a74bdeb0",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
@@ -234,7 +250,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2969e03",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# QAOA Circuit\n",
@@ -246,7 +264,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a1d763bf",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "example_qaoa_circuit, _, _ = qaoa_circuit(sat_hamiltonian, 6, 1)\n",
@@ -266,7 +286,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c83f7645",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# QAOA Quantum Procedure\n",
@@ -278,7 +300,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "95848f67",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "counts, qc = quantum(sat_hamiltonian, 6, 1, 1, 1)\n",
@@ -289,7 +313,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3c9da5cc",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "plot_histogram(counts, figsize=(40, 10))"
@@ -408,7 +434,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "691550cc",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from util.hamiltonian_math import solve_bruteforce\n",
@@ -419,7 +447,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c1b0d2b7",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from qubovert import spin_var\n",
@@ -443,7 +473,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "188709a3",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# cost and sat individually\n",
@@ -485,7 +517,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c0dcb437-ba13-47b8-af52-b902b224f211",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from util.hamiltonian_math import compute_config_energy\n",
@@ -505,7 +539,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e8c6d26",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from util.hamiltonian_math import compute_hamiltonian_energy, hamiltonian_strategy_average, hamiltonian_strategy_top, hamiltonian_strategy_min\n",
@@ -529,7 +565,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7e5a02a",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from qaoa_mincost_sat import get_expectation\n",
@@ -540,7 +578,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "967e6e00",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
@@ -568,7 +608,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8bdfc014-0011-43fe-ac3e-db3584e58281",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from qaoa_mincost_sat import apply_qaoa\n",
@@ -579,7 +621,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "216096d9",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# QAOA Example Application Using Optimizer\n",
@@ -619,7 +663,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0301ed4c",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# qc.draw(output=\"mpl\")"
@@ -629,7 +675,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7e594338",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Pretty Print the results of the previous Cell\n",
@@ -645,15 +693,23 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a16a4440",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
-    "from qaoa_mincost_sat import config_prioritization\n",
     "\n",
-    "prioritized_list = config_prioritization(combined_hamiltonian, 5)\n",
+    "from qaoa_mincost_sat import apply_qaoa_statevector\n",
+    "import numpy as np\n",
     "\n",
-    "for item in prioritized_list:\n",
-    "    print(valid_configs.__contains__(item) or item == best_config)"
+    "probabilities, qc = apply_qaoa_statevector(hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer)\n",
+    "\n",
+    "probabilities_dict = {}\n",
+    "\n",
+    "for i in range(0, 2 ** 6):\n",
+    "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
+    "\n",
+    "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
    ]
   }
  ],
