--- a/configproblem/qaoa_config_prioritization.ipynb
+++ b/configproblem/qaoa_config_prioritization.ipynb
@@ -58,6 +58,9 @@
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
     "\n",
+    "# Equal probability sat model\n",
+    "# sat_model = alpha_sat * ( 0.6 * (1 - x1 - x2 + x1 * x2) + (x3 * x4) + (1 - x3 - x4 + x3 * x4) + 0.6 * (x5 - x5 * x6) )\n",
+    "\n",
     "# Cost QUBO\n",
     "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 30*x5 + 10*x6\n",
     "\n",
@@ -105,13 +108,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%psource deflate_config"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "%psource prio.deflate_config"
+   ]
   },
   {
    "cell_type": "code",
@@ -119,11 +120,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prioritized_list = prio.config_prioritization(combined_hamiltonian, 5)\n",
+    "prioritized_list = prio.config_prioritization(combined_hamiltonian, 3, 2600)\n",
     "\n",
     "for item in prioritized_list:\n",
     "    # Check config validity\n",
-    "    print(config_cost.keys().__contains__(item))"
+    "    if config_cost.keys().__contains__(item):\n",
+    "        print(\"Valid config \" + str(item) + \" with cost: \" + str(config_cost[item]))\n",
+    "    else:\n",
+    "        print(\"Invalid config\")"
    ]
   }
  ],
@@ -143,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
