Add visualization for effect of deflation matrices

--- a/configproblem/qaoa_config_prioritization.ipynb
+++ b/configproblem/qaoa_config_prioritization.ipynb
@@ -53,7 +53,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 1000 # 1e6\n",
+    "alpha_sat = 300 # 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -90,11 +90,11 @@
    "source": [
     "# Adjusting the Hamiltonian\n",
     "\n",
-    "In order to create an ordered list of configurations with ascending cost, we need to run the QAOA algorithm multiple times and adjust the hamiltonian for each run to exclude the config that was previously measured with the highest probability.\n",
+    "In order to create an ordered list of configurations with ascending cost, we run the QAOA algorithm multiple times and adjust the hamiltonian for each run to exclude the config that was previously measured with the highest probability.\n",
     "We do this by using Variational Quantum Deflation as described by [Higgott et al.](https://arxiv.org/abs/1805.08138)\n",
     "\n",
     "## Deflating configurations\n",
-    "In order to determine the $k$-th best configuration, we need to exclude every other configuration in our hamiltonian.\n",
+    "In order to determine the $k$-th best configuration, we need to exclude every configuration before the $k$-th best in our hamiltonian.\n",
     "To do this we can use the following formular:\n",
     "\n",
     "$H_k := H + \\sum_{i = 0}^{k - 1} \\beta_i | i \\rangle \\langle i |$\n",
@@ -129,6 +129,33 @@
     "    else:\n",
     "        print(\"Invalid config\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from qaoa_mincost_sat import apply_qaoa_statevector\n",
+    "from qaoa_config_prioritization import get_deflation_dict\n",
+    "from util.visualization import plot_counts_histogram\n",
+    "from qubovert.utils import QUSOMatrix\n",
+    "import numpy as np\n",
+    "# Visualize effect of deflation dict\n",
+    "\n",
+    "for key in config_cost.keys():\n",
+    "    print(\"current config: \" + key)\n",
+    "    hamiltonian = QUSOMatrix(get_deflation_dict(key, 1000))\n",
+    "\n",
+    "    probabilities, qc = apply_qaoa_statevector(hamiltonian, print_res=False)\n",
+    "    probabilities_dict = {}\n",
+    "    for j in range(0, 2 ** 6):\n",
+    "        probabilities_dict[(np.binary_repr(j, width=6))] = round(probabilities[j], 4)\n",
+    "\n",
+    "    plot_counts_histogram(probabilities_dict, key, [])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
@@ -147,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
