Add second deflation strategy: projection deflation

--- a/configproblem/qaoa_config_prioritization.ipynb
+++ b/configproblem/qaoa_config_prioritization.ipynb
@@ -53,7 +53,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 300 # 1e6\n",
+    "alpha_sat = 1000 # 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -120,7 +120,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prioritized_list = prio.config_prioritization(combined_hamiltonian, 3, 2600)\n",
+    "# deflation factor start value for vqd: 2600\n",
+    "# deflation factor start value for pd: 800\n",
+    "prioritized_list = prio.config_prioritization(combined_hamiltonian, 5, 800, strategy='pd')\n",
     "\n",
     "for item in prioritized_list:\n",
     "    # Check config validity\n",
@@ -133,18 +135,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from qaoa_mincost_sat import apply_qaoa_statevector\n",
-    "from qaoa_config_prioritization import get_deflation_dict\n",
+    "from qaoa_config_prioritization import get_deflation_quso_matrix\n",
     "from util.visualization import plot_counts_histogram\n",
-    "from qubovert.utils import QUSOMatrix\n",
     "import numpy as np\n",
     "# Visualize effect of deflation dict\n",
     "\n",
     "for key in config_cost.keys():\n",
     "    print(\"current config: \" + key)\n",
-    "    hamiltonian = QUSOMatrix(get_deflation_dict(key, 1000))\n",
+    "    hamiltonian = get_deflation_quso_matrix(key, 1000)\n",
     "\n",
     "    probabilities, qc = apply_qaoa_statevector(hamiltonian, print_res=False)\n",
     "    probabilities_dict = {}\n",
@@ -152,10 +154,7 @@
     "        probabilities_dict[(np.binary_repr(j, width=6))] = round(probabilities[j], 4)\n",
     "\n",
     "    plot_counts_histogram(probabilities_dict, key, [])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -174,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
