--- a/configproblem/qaoa_config_prioritization.ipynb
+++ b/configproblem/qaoa_config_prioritization.ipynb
@@ -122,15 +122,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%psource prio.deflate_config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# deflation factor start value for vqd: 2600\n",
     "# deflation factor start value for pd: 800\n",
     "prioritized_list = prio.config_prioritization(combined_hamiltonian, 5, 800, strategy='pd')\n",
@@ -144,28 +135,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "from qaoa_mincost_sat import apply_qaoa_statevector\n",
-    "from qaoa_config_prioritization import get_deflation_quso_matrix\n",
-    "from util.visualization import plot_counts_histogram\n",
-    "import numpy as np\n",
-    "# Visualize effect of deflation dict\n",
+    "## Conclusion\n",
     "\n",
-    "for key in config_cost.keys():\n",
-    "    print(\"current config: \" + key)\n",
-    "    hamiltonian = get_deflation_quso_matrix(key, 1000)\n",
-    "\n",
-    "    probabilities, qc = apply_qaoa_statevector(hamiltonian, print_res=False)\n",
-    "    probabilities_dict = {}\n",
-    "    for j in range(0, 2 ** 6):\n",
-    "        probabilities_dict[(np.binary_repr(j, width=6))] = round(probabilities[j], 4)\n",
-    "\n",
-    "    plot_counts_histogram(probabilities_dict, key, [])"
-   ]
+    "We found that the deflation methods above are not applicable to our problem.\n",
+    "We want to eliminate specific configurations from our hamiltonian, while the different deflation methods eliminate eigenstates from the hamiltonian.\n",
+    "This means that in order to apply such methods to our problem, we would need a matrix of dimension $n^2$ as our hamiltonian where $n$ is the length of our feature vector, which would in turn mean that we would also need $n^2$ qubits to represent our hamiltonian and thus wouldn't scale well."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
