--- a/configproblem/qaoa_quantum_deflation.ipynb
+++ b/configproblem/qaoa_quantum_deflation.ipynb
@@ -36,7 +36,7 @@
     "page.page = print\n",
     "\n",
     "# Imports used for examples\n",
-    "import qaoa_config_prioritization as prio\n",
+    "import qaoa_quantum_deflation as quantum_deflation\n",
     "from pprint import pprint"
    ]
   },
@@ -124,7 +124,7 @@
    "source": [
     "# deflation factor start value for vqd: 2600\n",
     "# deflation factor start value for pd: 800\n",
-    "prioritized_list = prio.config_prioritization(combined_hamiltonian, 5, 800, strategy='pd')\n",
+    "prioritized_list = quantum_deflation.config_prioritization(combined_hamiltonian, 5, 800, strategy='pd')\n",
     "\n",
     "for item in prioritized_list:\n",
     "    # Check config validity\n",
