--- a/configproblem/qaoa_quantum_deflation.ipynb
+++ b/configproblem/qaoa_quantum_deflation.ipynb
@@ -141,7 +141,8 @@
     "\n",
     "We found that the deflation methods above are not applicable to our problem.\n",
     "We want to eliminate specific configurations from our hamiltonian, while the different deflation methods eliminate eigenstates from the hamiltonian.\n",
-    "This means that in order to apply such methods to our problem, we would need a matrix of dimension $n^2$ as our hamiltonian where $n$ is the length of our feature vector, which would in turn mean that we would also need $n^2$ qubits to represent our hamiltonian and thus wouldn't scale well."
+    "This means that in order to apply such methods to our problem, we would need a hamiltonian where each possible config is an eigenvector thus requiring a hamiltonian of dimension $2^n$ and therefore also $2^n$ qubits where $n$ is the length of our feature vector.\n",
+    "This approach wouldn't scale well and is therefore not feasible."
    ],
    "metadata": {
     "collapsed": false
