Improve evaluation of qaoa results

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -680,8 +680,17 @@
     "# Evaluate prioritization results\n",
     "for config in sorted_by_value_counts:\n",
     "    if config in config_cost:\n",
+    "        value = config_cost[config]\n",
+    "        config_cost_copy = config_cost.copy()\n",
+    "        index = 0\n",
+    "\n",
+    "        while value in config_cost_copy.values():\n",
+    "            index = list(config_cost_copy.values()).index(value)\n",
+    "            config_to_pop = list(config_cost_copy.keys())[list(config_cost_copy.values()).index(value)]\n",
+    "            config_cost_copy.pop(config_to_pop)\n",
+    "\n",
     "        print(\"Valid config \" + str(config) + \" with cost: \" + str(config_cost[config]))\n",
-    "        print(ordinal(list(config_cost).index(config) + 1) + \" best config\")\n",
+    "        print(ordinal(index + 1) + \" best config\")\n",
     "    else:\n",
     "        print(\"Invalid config \" + str(config))"
    ],
