Add methods for creating a qaoa circuit

--- a/configproblem/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa_mincost_k_sat.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Solving a mincost k-SAT problem using QAOA\n",
     "\n",
@@ -26,23 +27,21 @@
     "| $x_4$   | 50         |\n",
     "| $x_5$   | 10         |\n",
     "| $x_6$   | 10         |"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Converting k-SAT to HOBO\n",
     "\n",
-    "For clauses containing two variables, we can just use the quadratic penalties described by [Glover](https://arxiv.org/abs/1811.11538) we used in the other notebook:\n",
+    "For clauses containing two variables, we can just use the quadratic penalties described by [Glover](https://arxiv.org/abs/1811.11538) we also used in the other notebook:\n",
     "\n",
-    "| Clause Type   | Example                        | Constraint                 | Penalty                     |\n",
-    "|---------------|--------------------------------|----------------------------|-----------------------------|\n",
-    "| No Negations  | $(x_i \\vee x_j)$               | $x_i + x_j \\geq 1$         | $(1 - x_i - x_j + x_i x_j)$ |\n",
-    "| One Negation  | $(x_i \\vee \\lnot{}x_j)$        | $x_i + (1-x_j) \\geq 1$     | $(x_j - x_i x_j)$           |\n",
-    "| Two Negations | $(\\lnot{}x_i \\vee \\lnot{}x_j)$ | $(1-x_i) + (1-x_j) \\geq 1$ | $(x_i x_j)$                 |\n",
+    "| Clause Type   | Example                          | Constraint                   | Penalty                       |\n",
+    "|---------------|----------------------------------|------------------------------|-------------------------------|\n",
+    "| No Negations  | $$(x_i \\vee x_j)$$               | $$x_i + x_j \\geq 1$$         | $$(1 - x_i - x_j + x_i x_j)$$ |\n",
+    "| One Negation  | $$(x_i \\vee \\lnot{}x_j)$$        | $$x_i + (1-x_j) \\geq 1$$     | $$(x_j - x_i x_j)$$           |\n",
+    "| Two Negations | $$(\\lnot{}x_i \\vee \\lnot{}x_j)$$ | $$(1-x_i) + (1-x_j) \\geq 1$$ | $$(x_i x_j)$$                 |\n",
     "\n",
     "For clauses containing $k \\ge 3$ variables, we can apply the penalties recursively.\n",
     "\n",
@@ -69,33 +68,142 @@
     "\n",
     "$$\n",
     "min~y(x) = (1- x_1 - x_2 + x_1 x_2) + (x_3 - x_2 x_3 - x_3 x_4 + x_2 x_3 x_4) + (x_5 x_6 - x_3 x_5 x_6)\\\\\n",
-    "~~~~~~~~~~~~~= 1 - x_1 - x_2 + x_3 + x_1 x_2 - x_2 x_3 - x_3 x_4 + x_5 x_6 + x_2 x_3 x_4 - x_3 x_5 x_6\n",
-    "$$\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "= 1 - x_1 - x_2 + x_3 + x_1 x_2 - x_2 x_3 - x_3 x_4 + x_5 x_6 + x_2 x_3 x_4 - x_3 x_5 x_6\n",
+    "$$\n",
+    "\n",
+    "We can now transform this HOBO model into an Ising model\n",
+    "\n",
+    "$$\n",
+    "min~y(x) = 1 - \\frac{1 -s_1}{2} - \\frac{1 - s_2}{2} + \\frac{1 - s_3}{2} + \\frac{1 - s_1}{2} \\frac{1 - s_2}{2} - \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} + \\frac{1 - s_5}{2} \\frac{1 - s_6}{2} + \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_5}{2} \\frac{1 - s_6}{2}\\\\\n",
+    "= 1 - s_1 \\frac{1}{2} - s_2 \\frac{1}{2} + s_3 \\frac{1}{2} + s_1 s_2 \\frac{1}{4} - s_2 s_3 \\frac{1}{4} - s_3 s_4 \\frac{1}{4} + s_5 s_6 \\frac{1}{4} + s_2 s_3 s_4 \\frac{1}{8} - s_3 s_5 s_6 \\frac{1}{8}\\\\\n",
+    "$$\n",
+    "\n",
+    "Which leaves us with the following cost hamiltonian $H_C$:\n",
+    "\n",
+    "$$\n",
+    "H_C = 1 * I - \\sigma_1^z \\frac{1}{2} - \\sigma_2^z \\frac{1}{2} + \\sigma_2^z \\frac{1}{2} + \\sigma_1^z \\sigma_2^z \\frac{1}{4} - \\sigma_2^z \\sigma_3^z \\frac{1}{4} - \\sigma_3^z \\sigma_4^z \\frac{1}{4} + \\sigma_5^z \\sigma_6^z \\frac{1}{4} + \\sigma_2^z \\sigma_3^z \\sigma_4^z \\frac{1}{8} - \\sigma_3^z \\sigma_5^z \\sigma_6^z \\frac{1}{8}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quantum Circuit\n",
+    "\n",
+    "We start by defining a parametrized circuit.\n",
+    "We will skip the details of initialization and implementing the mixing operator, as they are the same as in the other notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Notebook Setup\n",
+    "from IPython.core import page\n",
+    "page.page = print\n",
+    "\n",
+    "# Imports used for examples\n",
+    "from pprint import pprint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Phase-separating operator\n",
+    "Like in the other notebook, the phase-separating operator $U(C,\\gamma)$ encodes $C$ and can be derived from a cost Hamiltonian $H_{Ctot}$ in Ising-form.\n",
+    "Unlike in the other notebook, there is now the possibility of having terms of degree higher than 2 in the cost function, for which we need to implement the corresponding $R_{z ... z}$ gates.\n",
+    "We do this by decomposing the $R_{z ... z}$ gate into multiple CNOT gates and a single $R_z$ gate.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R_{zzz} gate\n",
+    "from qaoa_mincost_k_sat import k_Rz_gate\n",
+    "from qiskit import QuantumCircuit\n",
+    "\n",
+    "qubits = [0, 1, 2]\n",
+    "qc = QuantumCircuit(len(qubits))\n",
+    "qc_zzz = k_Rz_gate(qc, qubits, 1)\n",
+    "qc_zzz.draw(output='mpl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this implementation of general $R_{z ... z}$ gates, we can now implement the phase-separating operator for our example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
+    "# hamiltonian = {(q1?, q2?, ...) : factor}\n",
+    "sat_hamiltonian = {\n",
+    "    (): 1,\n",
+    "    (0,): -0.5,\n",
+    "    (1,): -0.5,\n",
+    "    (2,): 0.5,\n",
+    "    (0, 1): 0.25,\n",
+    "    (1, 2): -0.25,\n",
+    "    (2, 3): -0.25,\n",
+    "    (4, 5): 0.25,\n",
+    "    (1, 2, 3): 0.125,\n",
+    "    (2, 4, 5): -0.125\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qaoa_mincost_k_sat import problem_circuit\n",
+    "%psource problem_circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_qc_problem, gamma = problem_circuit(sat_hamiltonian, 6)\n",
+    "example_qc_problem.draw(output='mpl')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
