Add methods for applying qaoa

--- a/configproblem/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa_mincost_k_sat.ipynb
@@ -81,7 +81,7 @@
     "Which leaves us with the following cost hamiltonian $H_C$:\n",
     "\n",
     "$$\n",
-    "H_C = 1 * I - \\sigma_1^z \\frac{1}{2} - \\sigma_2^z \\frac{1}{2} + \\sigma_2^z \\frac{1}{2} + \\sigma_1^z \\sigma_2^z \\frac{1}{4} - \\sigma_2^z \\sigma_3^z \\frac{1}{4} - \\sigma_3^z \\sigma_4^z \\frac{1}{4} + \\sigma_5^z \\sigma_6^z \\frac{1}{4} + \\sigma_2^z \\sigma_3^z \\sigma_4^z \\frac{1}{8} - \\sigma_3^z \\sigma_5^z \\sigma_6^z \\frac{1}{8}\n",
+    "H_C = 1 * I - \\sigma_1^z \\frac{1}{2} - \\sigma_2^z \\frac{1}{2} + \\sigma_3^z \\frac{1}{2} + \\sigma_1^z \\sigma_2^z \\frac{1}{4} - \\sigma_2^z \\sigma_3^z \\frac{1}{4} - \\sigma_3^z \\sigma_4^z \\frac{1}{4} + \\sigma_5^z \\sigma_6^z \\frac{1}{4} + \\sigma_2^z \\sigma_3^z \\sigma_4^z \\frac{1}{8} - \\sigma_3^z \\sigma_5^z \\sigma_6^z \\frac{1}{8}\n",
     "$$"
    ]
   },
@@ -126,12 +126,12 @@
    "outputs": [],
    "source": [
     "# R_{zzz} gate\n",
-    "from qaoa_mincost_k_sat import k_Rz_gate\n",
+    "from qaoa_mincost_k_sat import k_rz_gate\n",
     "from qiskit import QuantumCircuit\n",
     "\n",
     "qubits = [0, 1, 2]\n",
     "qc = QuantumCircuit(len(qubits))\n",
-    "qc_zzz = k_Rz_gate(qc, qubits, 1)\n",
+    "qc_zzz = k_rz_gate(qc, qubits, 1)\n",
     "qc_zzz.draw(output='mpl')"
    ]
   },
@@ -182,6 +182,65 @@
    "source": [
     "example_qc_problem, gamma = problem_circuit(sat_hamiltonian, 6)\n",
     "example_qc_problem.draw(output='mpl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qubovert.utils import DictArithmetic\n",
+    "alpha_sat = 1000\n",
+    "\n",
+    "cost_hamiltonian = {\n",
+    "    (0,): 30,\n",
+    "    (1,): 20,\n",
+    "    (2,): 25,\n",
+    "    (3,): 50,\n",
+    "    (4,): 10,\n",
+    "    (5,): 10\n",
+    "}\n",
+    "\n",
+    "combined_hamiltonian = DictArithmetic(cost_hamiltonian) + alpha_sat * DictArithmetic(sat_hamiltonian)\n",
+    "\n",
+    "print(combined_hamiltonian)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qaoa_mincost_k_sat import apply_qaoa\n",
+    "\n",
+    "hamiltonian = sat_hamiltonian\n",
+    "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "n_features = 6\n",
+    "shots = 256\n",
+    "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
+    "use_warmstart = False\n",
+    "use_optimizer = True\n",
+    "\n",
+    "if not use_warmstart:\n",
+    "    warmstart_statevector = None\n",
+    "\n",
+    "counts, qc = apply_qaoa(hamiltonian, layers, n_features, shots, theta, warmstart_statevector, use_optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.visualization import plot_counts_histogram\n",
+    "\n",
+    "best_config = \"111111\"\n",
+    "valid_configs = [\"111111\", \"011111\", \"101111\", \"001111\", \"110111\", \"010111\", \"100111\", \"000111\", \"011011\", \"101011\", \"001011\", \"010011\", \"100011\", \"000011\", \"111101\", \"011101\", \"101101\", \"001101\", \"011001\", \"101001\", \"001001\", \"010001\", \"100001\", \"000001\", \"111110\", \"011110\", \"101110\", \"001110\", \"110110\", \"010110\", \"100110\", \"000110\", \"011010\", \"101010\", \"010010\", \"100010\", \"000010\"]\n",
+    "\n",
+    "plot_counts_histogram(counts, best_config, valid_configs)"
    ]
   }
  ],
