Fix quantum() method not creating a superposition circuit on initialization

--- a/configproblem/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa_mincost_k_sat.ipynb
@@ -75,13 +75,13 @@
     "\n",
     "$$\n",
     "min~y(x) = 1 - \\frac{1 -s_1}{2} - \\frac{1 - s_2}{2} + \\frac{1 - s_3}{2} + \\frac{1 - s_1}{2} \\frac{1 - s_2}{2} - \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} + \\frac{1 - s_5}{2} \\frac{1 - s_6}{2} + \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_5}{2} \\frac{1 - s_6}{2}\\\\\n",
-    "= 1 - s_1 \\frac{1}{2} - s_2 \\frac{1}{2} + s_3 \\frac{1}{2} + s_1 s_2 \\frac{1}{4} - s_2 s_3 \\frac{1}{4} - s_3 s_4 \\frac{1}{4} + s_5 s_6 \\frac{1}{4} + s_2 s_3 s_4 \\frac{1}{8} - s_3 s_5 s_6 \\frac{1}{8}\\\\\n",
+    "= 1 + s_1 \\frac{1}{2} + s_2 \\frac{1}{2} - s_3 \\frac{1}{2} - s_1 s_2 \\frac{1}{4} + s_2 s_3 \\frac{1}{4} + s_3 s_4 \\frac{1}{4} - s_5 s_6 \\frac{1}{4} - s_2 s_3 s_4 \\frac{1}{8} + s_3 s_5 s_6 \\frac{1}{8}\\\\\n",
     "$$\n",
     "\n",
     "Which leaves us with the following cost hamiltonian $H_C$:\n",
     "\n",
     "$$\n",
-    "H_C = 1 * I - \\sigma_1^z \\frac{1}{2} - \\sigma_2^z \\frac{1}{2} + \\sigma_3^z \\frac{1}{2} + \\sigma_1^z \\sigma_2^z \\frac{1}{4} - \\sigma_2^z \\sigma_3^z \\frac{1}{4} - \\sigma_3^z \\sigma_4^z \\frac{1}{4} + \\sigma_5^z \\sigma_6^z \\frac{1}{4} + \\sigma_2^z \\sigma_3^z \\sigma_4^z \\frac{1}{8} - \\sigma_3^z \\sigma_5^z \\sigma_6^z \\frac{1}{8}\n",
+    "H_C = 1 * I + \\sigma_1^z \\frac{1}{2} + \\sigma_2^z \\frac{1}{2} - \\sigma_3^z \\frac{1}{2} - \\sigma_1^z \\sigma_2^z \\frac{1}{4} + \\sigma_2^z \\sigma_3^z \\frac{1}{4} + \\sigma_3^z \\sigma_4^z \\frac{1}{4} - \\sigma_5^z \\sigma_6^z \\frac{1}{4} - \\sigma_2^z \\sigma_3^z \\sigma_4^z \\frac{1}{8} + \\sigma_3^z \\sigma_5^z \\sigma_6^z \\frac{1}{8}\n",
     "$$"
    ]
   },
@@ -152,15 +152,15 @@
     "# hamiltonian = {(q1?, q2?, ...) : factor}\n",
     "sat_hamiltonian = {\n",
     "    (): 1,\n",
-    "    (0,): -0.5,\n",
-    "    (1,): -0.5,\n",
-    "    (2,): 0.5,\n",
-    "    (0, 1): 0.25,\n",
-    "    (1, 2): -0.25,\n",
-    "    (2, 3): -0.25,\n",
-    "    (4, 5): 0.25,\n",
-    "    (1, 2, 3): 0.125,\n",
-    "    (2, 4, 5): -0.125\n",
+    "    (0,): 0.5,\n",
+    "    (1,): 0.5,\n",
+    "    (2,): -0.5,\n",
+    "    (0, 1): -0.25,\n",
+    "    (1, 2): 0.25,\n",
+    "    (2, 3): 0.25,\n",
+    "    (4, 5): -0.25,\n",
+    "    (1, 2, 3): -0.125,\n",
+    "    (2, 4, 5): +0.125\n",
     "}"
    ]
   },
@@ -204,7 +204,7 @@
     "\n",
     "combined_hamiltonian = DictArithmetic(cost_hamiltonian) + alpha_sat * DictArithmetic(sat_hamiltonian)\n",
     "\n",
-    "print(combined_hamiltonian)"
+    "pprint(combined_hamiltonian)"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "source": [
     "from qaoa_mincost_k_sat import apply_qaoa\n",
     "\n",
-    "hamiltonian = sat_hamiltonian\n",
+    "hamiltonian = combined_hamiltonian\n",
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
@@ -237,7 +237,7 @@
    "source": [
     "from util.visualization import plot_counts_histogram\n",
     "\n",
-    "best_config = \"111111\"\n",
+    "best_config = \"000010\" # 654321\n",
     "valid_configs = [\"111111\", \"011111\", \"101111\", \"001111\", \"110111\", \"010111\", \"100111\", \"000111\", \"011011\", \"101011\", \"001011\", \"010011\", \"100011\", \"000011\", \"111101\", \"011101\", \"101101\", \"001101\", \"011001\", \"101001\", \"001001\", \"010001\", \"100001\", \"000001\", \"111110\", \"011110\", \"101110\", \"001110\", \"110110\", \"010110\", \"100110\", \"000110\", \"011010\", \"101010\", \"010010\", \"100010\", \"000010\"]\n",
     "\n",
     "plot_counts_histogram(counts, best_config, valid_configs)"
