Fix number of qubits being hardcoded and some cleanup

--- a/configproblem/qaoa_quantum_deflation.ipynb
+++ b/configproblem/qaoa_quantum_deflation.ipynb
@@ -58,9 +58,6 @@
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
     "\n",
-    "# Equal probability sat model\n",
-    "# sat_model = alpha_sat * ( 0.6 * (1 - x1 - x2 + x1 * x2) + (x3 * x4) + (1 - x3 - x4 + x3 * x4) + 0.6 * (x5 - x5 * x6) )\n",
-    "\n",
     "# Cost QUBO\n",
     "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 30*x5 + 10*x6\n",
     "\n",
@@ -124,7 +121,7 @@
    "source": [
     "# deflation factor start value for vqd: 2600\n",
     "# deflation factor start value for pd: 800\n",
-    "prioritized_list = quantum_deflation.config_prioritization(combined_hamiltonian, 5, 800, strategy='pd')\n",
+    "prioritized_list = quantum_deflation.config_prioritization(combined_hamiltonian, 6, 3, 2600, strategy='vqd', debug_output=True)\n",
     "\n",
     "for item in prioritized_list:\n",
     "    # Check config validity\n",
@@ -136,6 +133,7 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Conclusion\n",
     "\n",
@@ -143,10 +141,7 @@
     "We want to eliminate specific configurations from our hamiltonian, while the different deflation methods eliminate eigenstates from the hamiltonian.\n",
     "This means that in order to apply such methods to our problem, we would need a hamiltonian where each possible config is an eigenvector thus requiring a hamiltonian of dimension $2^n$ and therefore also $2^n$ qubits where $n$ is the length of our feature vector.\n",
     "This approach wouldn't scale well and is therefore not feasible."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
