Fix HOBO to Ising transformation

--- a/configproblem/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa_mincost_k_sat.ipynb
@@ -145,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
@@ -160,9 +159,12 @@
     "    (2, 3): 0.25,\n",
     "    (4, 5): -0.25,\n",
     "    (1, 2, 3): -0.125,\n",
-    "    (2, 4, 5): +0.125\n",
+    "    (2, 4, 5): 0.125\n",
     "}"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -187,25 +189,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from qubovert.utils import DictArithmetic\n",
-    "alpha_sat = 1000\n",
+    "# cost and sat individually\n",
+    "from qubovert import boolean_var\n",
     "\n",
-    "cost_hamiltonian = {\n",
-    "    (0,): 30,\n",
-    "    (1,): 20,\n",
-    "    (2,): 25,\n",
-    "    (3,): 50,\n",
-    "    (4,): 10,\n",
-    "    (5,): 10\n",
-    "}\n",
+    "# define binary vars\n",
+    "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
-    "combined_hamiltonian = DictArithmetic(cost_hamiltonian) + alpha_sat * DictArithmetic(sat_hamiltonian)\n",
+    "# SAT Penalty\n",
+    "alpha_sat = 500 # 1e6\n",
     "\n",
+    "# SAT HOBO\n",
+    "sat_model = alpha_sat * (1 - x1 - x2 + x3 + x1*x2 - x2*x3 - x3*x4 + x5*x6 + x2*x3*x4 - x3*x5*x6)\n",
+    "\n",
+    "# Cost HOBO\n",
+    "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 10*x5 + 10*x6\n",
+    "\n",
+    "# Combine models\n",
+    "combined_model = sat_model +  cost_model\n",
+    "print(\"HOBO Combined Model:\")\n",
+    "pprint(combined_model)\n",
+    "print(\"Ising Combined Model: \")\n",
+    "combined_hamiltonian = combined_model.to_puso()\n",
     "pprint(combined_hamiltonian)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -260,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
