Refactor to eliminate duplicate code and extract qaoa files into extra folder

--- a/configproblem/qaoa/qaoa_quantum_deflation.ipynb
+++ b/configproblem/qaoa/qaoa_quantum_deflation.ipynb
@@ -36,8 +36,7 @@
     "page.page = print\n",
     "\n",
     "# Imports used for examples\n",
-    "import qaoa_quantum_deflation as quantum_deflation\n",
-    "from pprint import pprint"
+    "import qaoa_quantum_deflation as quantum_deflation"
    ]
   },
   {
@@ -119,9 +118,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from qaoa_mincost_sat import problem_circuit\n",
     "# deflation factor start value for vqd: 2600\n",
     "# deflation factor start value for pd: 800\n",
-    "prioritized_list = quantum_deflation.config_prioritization(combined_hamiltonian, 6, 3, 2600, strategy='vqd', debug_output=True)\n",
+    "prioritized_list = quantum_deflation.config_prioritization(problem_circuit, combined_hamiltonian, 6, 3, 2600, strategy='vqd', debug_output=True)\n",
     "\n",
     "for item in prioritized_list:\n",
     "    # Check config validity\n",
